--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser pytz
+          pip install feedparser pytz requests
 
       - name: Run script to generate HTML
         run: python main.py
